--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,10 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "flask>=3.1.3",
-    "flask-executor>=1.0.0",
-    "keras>=3.13.2",
-    "pillow>=12.1.1",
+    "flask",
+    "flask-executor",
+    "keras",
+    "pillow",
     "torch>=2.10.0",
-    "torch-xla>=2.9.0",
+    "torchvision>=0.25.0",
 ]
+
+[[tool.uv.index]]
+url = "https://download.pytorch.org/whl/cpu"
